flickr now scales correctly on mobile

--- a/src/scss/social.scss
+++ b/src/scss/social.scss
@@ -69,7 +69,7 @@
 		&--flickr--landscape {
 			@include aspect-ratio(3, 2);
 			width: 422px;
-			max-width: 60%;
+			max-width: 50.5%;
 
 			@media (min-width: $brk--phone) {
 				max-width: 47%;
@@ -79,7 +79,7 @@
 		&--flickr--portrait {
 			@include aspect-ratio(2, 3);
 			width: 187px;
-			max-width: 60%;
+			max-width: 22.5%;
 
 			@media (min-width: $brk--phone) {
 				max-width: 47%;
